[package]
name = "CLI-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="0.11.25", features = ["blocking", "json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0"
serde = "1.0.197"